# footage_viewer

./: .gitignore  AGENTS.md  Cargo.toml
.cargo/: config.toml.example
app/: Cargo.toml  build.rs
app/src/: drive.rs  logging.rs  main.rs  stats.rs  update.rs
docs/: concept.md  ideas.txt
docs/adr/: 0001-ffmpeg-integration-and-build-strategy.md  0002-seek-based-grid-extraction.md  0003-keyframe-contact-sheet.md  0004-click-to-play-from-previous-keyframe.md  0005-command-driven-live-playback-and-scrubber.md  0006-github-release-self-update-distribution.md  0007-remove-self-update-manual-download.md  0008-file-logging-for-tester-reports.md  0009-gpu-decode-and-arrival-paced-scrubbing.md  0010-cancel-cache-and-read-ahead-for-slow-storage.md  0011-bound-the-read-ahead-queue.md  0012-hold-the-frames-a-scrub-showed.md  0013-clip-stats-dataset.md  0014-decode-playback-at-the-size-the-view-shows.md  0015-seek-to-the-keyframes-instead-of-reading-past-them.md  0016-log-the-storage-bus-behind-a-clip.md  0017-report-the-open-as-header-plus-probe.md  0018-scan-the-folder-from-its-directory-entries.md  0019-cap-the-grids-frame-threads-on-the-gpu.md
media/: Cargo.toml
media/examples/: dump_grid.rs  grid_bench.rs  scrub_bench.rs
media/src/: lib.rs
scripts/: publish.ps1
spike/: README.md
spike/ffmpeg_next/: Cargo.toml
spike/ffmpeg_next/src/: main.rs
spike/hwaccel/: Cargo.toml
spike/hwaccel/src/: main.rs
test_videos/: README.md  generate.sh
