[package]
name = "footage_viewer"
version = "0.11.0"
edition = "2021"

[dependencies]
footage-viewer-media = { path = "../media" }
eframe = "0.35"
trash = "5.2.6"
# Logging facade; also captures eframe/wgpu diagnostics. Already in the tree via
# eframe, declared here so the app can log directly. See src/logging.rs.
log = "0.4"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# Embeds the application icon (icon.ico) into the Windows executable.
winresource = "0.1"
