[package]
name = "footage-viewer-media"
version = "0.1.0"
edition = "2021"

# Decode core: open a clip and extract an evenly-spaced grid of thumbnails.
# UI-agnostic (no egui) — returns raw RGBA so the app can build textures.

[dependencies]
# Only decode (avcodec), demux (avformat), and RGBA scaling (swscale) are used.
# Dropping the default `device`/`filter`/`software-resampling` features stops the
# linker from importing avdevice/avfilter/swresample (~34 MB of DLLs), which the
# Windows loader would otherwise map and scan before main() on every launch.
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-scaling"] }
anyhow = "1"
# JPEG-only: encodes single full-resolution stills (save_frame_jpeg).
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
# For the dump_grid example, which eyeballs extract_grid output as PNGs.
image = { version = "0.25", default-features = false, features = ["png"] }
