[package]
name = "footage-viewer-media"
version = "0.1.0"
edition = "2021"

# Decode core: open a clip and extract an evenly-spaced grid of thumbnails.
# UI-agnostic (no egui) — returns raw RGBA so the app can build textures.

[dependencies]
# Only decode (avcodec), demux (avformat), and RGBA scaling (swscale) are used.
# Dropping the default `device`/`filter`/`software-resampling` features stops the
# linker from importing avdevice/avfilter/swresample (~34 MB of DLLs), which the
# Windows loader would otherwise map and scan before main() on every launch.
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-scaling"] }
anyhow = "1"
# Logging facade; routes through the app's file logger. Used for scrub timing.
log = "0.4"
# Encodes single full-resolution stills (save_frame_jpeg), in place of image's
# encoder: that one spends ~440 ms on a 4K still on the tester's machine, which
# is half of what the "📷" makes her wait (see docs/adr/0008). Same 4:4:4 q92
# output for ~1.7x the speed on the 4K fixture here. `simd` is off by default and
# dispatches on AVX2 at runtime; it is the smaller half of that gain, so a
# machine without AVX2 still comes out ahead.
jpeg-encoder = { version = "0.7.0", features = ["simd"] }

[dev-dependencies]
# Reads back what the tests and the dump_grid example write: JPEG for the still
# save_frame_jpeg produces, PNG for the grid the example eyeballs.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
